Added temp colors, CPU type, single device temp check button

--- a/public/config.php.example
+++ b/public/config.php.example
@@ -45,7 +45,8 @@ $create_table = "CREATE TABLE IF NOT EXISTS `Devices`
 `ATVPROXYIP` VARCHAR(50) NULL,
 `ATVATVER` VARCHAR(15) NULL,
 `ATVPOGOVER` VARCHAR(15) NULL,
-`ANDROIDVER` VARCHAR(15) NULL
+`ANDROIDVER` VARCHAR(15) NULL,
+`CPUTYPE` VARCHAR(20) NULL
 );";
 
 $conn->query($create_table);
