Optional device name location in config

--- a/public/config.php.example
+++ b/public/config.php.example
@@ -19,6 +19,9 @@ $RDMport = "3306";
 //ONLY CHANGE THIS PORT IF YOU NEED TO
 $adbport = "5555";
 
+//Device Name Location
+$namelocation = "atconf"; // (atconf) - atlas config / (globset) - device settings(about device rename)
+
 //Enable/Disable features
 $noScreenshot = false; // diable with true
 $noProxy = false; // diable with true
