--- a/public/config.php.example
+++ b/public/config.php.example
@@ -9,27 +9,19 @@ $password = "yourstrongpassword";
 $dbname = "dbname";
 $port = "3306";
 
-//RDM DB
-$RDMservername = "0.0.0.0";
-$RDMusername = "root";
-$RDMpassword = "YOURSTRONGPASSWORD";
-$RDMdbname = "rdmdb";
-$RDMport = "3306";
-
 //ONLY CHANGE THIS PORT IF YOU NEED TO
 $adbport = "5555";
-
-//Device Name Location
-$namelocation = "atconf"; // (atconf) - atlas config / (globset) - device settings(about device rename)
 
 //Enable/Disable features
 $noScreenshot = false; // diable with true
 $noProxy = false; // diable with true
-$noAccount = true; // diable with true **CAUTION slows the controller page load**
-$noLastSeen = true; // diable with true **CAUTION slows the controller page load**
+
 
 
 // DON'T TOUCH ANYTHING BELOW HERE
+
+$version = "1";
+
 // Create connection
 $conn = new mysqli($servername, $username, $password, $dbname, $port);
 
@@ -38,7 +30,7 @@ if (!$conn) {
  die("Connection failed: " . mysqli_connect_error());
 }else{
 
-// Create Table
+// Create Table Devices
 $create_table = "CREATE TABLE IF NOT EXISTS `Devices`
 (
 `ID` INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
@@ -46,15 +38,49 @@ $create_table = "CREATE TABLE IF NOT EXISTS `Devices`
 `ATVTEMP` VARCHAR(5) NULL,
 `ATVLOCALIP` VARCHAR(50) NULL UNIQUE,
 `ATVPROXYIP` VARCHAR(50) NULL,
+`ATVACCOUNT` VARCHAR(50) NULL,
 `ATVATVER` VARCHAR(15) NULL,
 `ATVPOGOVER` VARCHAR(15) NULL,
 `ANDROIDVER` VARCHAR(15) NULL,
-`CPUTYPE` VARCHAR(20) NULL
+`CPUTYPE` VARCHAR(25) NULL,
+`LASTUPDATED` TIMESTAMP DEFAULT now() ON UPDATE now()
 );";
 
 $conn->query($create_table);
-
 $conn->close();
 
+}
+    
+$conn = new mysqli($servername, $username, $password, $dbname, $port);
+
+// Check Connection
+if (!$conn) {
+ die("Connection failed: " . mysqli_connect_error());
+}else{
+
+// Create Table updater
+$create_updater = "CREATE TABLE IF NOT EXISTS `Updater`
+(
+`ID` INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
+`STATUS` INT UNSIGNED NOT NULL DEFAULT '0',
+`LASTCHECK` TIMESTAMP DEFAULT now() ON UPDATE now(),
+`VERSION` INT UNSIGNED NOT NULL DEFAULT '0'
+);";
+
+$conn->query($create_updater);
+$conn->close();
+}
+    
+$conn = new mysqli($servername, $username, $password, $dbname, $port);
+
+// Check Connection
+if (!$conn) {
+ die("Connection failed: " . mysqli_connect_error());
+}else{
+
+// insert updater options
+$sql = " INSERT IGNORE INTO Updater (ID, STATUS, VERSION) VALUES ('1', '0', '$version')";
+$conn->query($sql);
+$conn->close();
 }
 ?>
