Auto Build on first load
Network Device scanner(WIP)

--- a/public/config.php.example
+++ b/public/config.php.example
@@ -18,16 +18,15 @@ $RDMport = "3306";
 
 //ONLY CHANGE THIS PORT IF YOU NEED TO
 $adbport = "5555";
-
+    
 //Device Name Location
-$namelocation = "atconf"; // (atconf) - atlas config / (globset) - device settings(about device rename)
+$namelocation = "globset"; // (atconf) - atlas config / (globset) - device settings(about device rename)
 
 //Enable/Disable features
 $noScreenshot = false; // diable with true
 $noProxy = false; // diable with true
 $noAccount = false; // diable with true
 $noLastSeen = false; // diable with true
-
 
 
 // DON'T TOUCH ANYTHING BELOW HERE
@@ -76,7 +75,8 @@ $create_updater = "CREATE TABLE IF NOT EXISTS `Updater`
 `ID` INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
 `STATUS` INT UNSIGNED NOT NULL DEFAULT '0',
 `LASTCHECK` TIMESTAMP DEFAULT now() ON UPDATE now(),
-`VERSION` INT UNSIGNED NOT NULL DEFAULT '0'
+`VERSION` INT UNSIGNED NOT NULL DEFAULT '0',
+`BUILT` INT UNSIGNED NOT NULL DEFAULT '0'
 );";
 
 $conn->query($create_updater);
@@ -91,8 +91,30 @@ if (!$conn) {
 }else{
 
 // insert updater options
-$sql = " INSERT IGNORE INTO Updater (ID, STATUS, VERSION) VALUES ('1', '0', '$version')";
+$sql = " INSERT IGNORE INTO Updater (ID, STATUS, VERSION, BUILT) VALUES ('1', '0', '$version', '0')";
 $conn->query($sql);
 $conn->close();
 }
+    
+$conn = new mysqli($servername, $username, $password, $dbname, $port);
+// Checking for connections
+if ($conn->connect_error) {
+    die('Connect Error (' . $mysqli->connect_errno . ') '. $mysqli->connect_error);
+}
+$sql = " SELECT * FROM Updater; ";
+$result = $conn->query($sql);
+$conn->close();
+    while($rows=$result->fetch_assoc()){
+        $built = $rows['BUILT'];
+        if($built == 0){
+            echo "<center><h1 style='color:#fff'>BUILDING</h1></center>";
+            echo $res=shell_exec('scripts/deviceinfo.sh > /dev/null 2>&1 &');
+            sleep(5);
+            ?>
+            <script>
+            window.location.reload();
+            </script>
+            <?php
+        }
+    }
 ?>
