Redesign, Single Device View, Server host controls. better logging. Drop DB, restart pm2 Rebuild. should be the last time for dropping the database

--- a/public/config.php.example
+++ b/public/config.php.example
@@ -23,10 +23,7 @@ $adbport = "5555";
 $namelocation = "globset"; // (atconf) - atlas config / (globset) - device settings(about device rename)
 
 //Enable/Disable features
-$noScreenshot = false; // diable with true
-$noProxy = false; // diable with true
-$noAccount = false; // diable with true
-$noLastSeen = false; // diable with true
+$devicecount = false; // Total devices and Online count (currently lags the site with bulk devices)
 
 
 //Don't touch
